<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

        <Button
            android:id="@+id/blockchainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blockchain" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

        <Button
            android:id="@+id/criptoassetsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criptoassets" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

        <Button
            android:id="@+id/nftsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nfts" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bagdesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/badges" />

            <Button
                android:id="@+id/logOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout" />

            <Button
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>