<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CriptoNowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/blockchainIV"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/blockchain"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/criptoassetsIV"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/criptoassets"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nftsIV"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/nfts"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>